--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             margin-bottom: 20px;
         }
 
+        /* Controls for search and pagination */
         .controls {
             display: flex;
             justify-content: space-between;
@@ -87,21 +88,6 @@
             padding: 15px 10px;
             text-align: left;
             font-weight: 600;
-            position: relative;
-        }
-
-        th.sortable {
-            cursor: pointer;
-            user-select: none;
-        }
-
-        th.sortable:hover {
-            background-color: #45a049;
-        }
-
-        th .sort-indicator {
-            margin-left: 5px;
-            font-size: 12px;
         }
 
         td {
@@ -126,14 +112,6 @@
             color: #000000 !important;
         }
 
-        .image-cell img {
-            width: 80px;
-            height: 80px;
-            object-fit: cover;
-            border-radius: 5px;
-            border: 2px solid #ddd;
-        }
-
         .images-container {
             display: flex;
             gap: 5px;
@@ -146,42 +124,6 @@
             object-fit: cover;
             border-radius: 3px;
             border: 1px solid #ddd;
-        }
-
-        /* Hidden description column - only show on hover */
-        .description-cell {
-            position: relative;
-            max-width: 150px;
-            overflow: hidden;
-        }
-
-        .description-content {
-            visibility: hidden;
-            opacity: 0;
-            position: absolute;
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            max-width: 300px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-            transition: opacity 0.3s, visibility 0.3s;
-            top: 100%;
-            left: 0;
-            margin-top: 5px;
-            font-size: 12px;
-            line-height: 1.4;
-        }
-
-        .description-cell:hover .description-content {
-            visibility: visible;
-            opacity: 1;
-        }
-
-        .description-short {
-            color: #666;
-            font-style: italic;
         }
 
         .category-badge {
@@ -253,36 +195,64 @@
             font-size: 18px;
         }
 
-        @media (max-width: 768px) {
-            .controls {
-                flex-direction: column;
-                align-items: stretch;
-            }
+        /* Step 4: Sortable columns */
+        th.sortable {
+            cursor: pointer;
+            user-select: none;
+            position: relative;
+        }
 
-            table {
-                font-size: 12px;
-            }
+        th.sortable:hover {
+            background-color: #45a049;
+        }
 
-            th, td {
-                padding: 8px 5px;
-            }
+        th .sort-indicator {
+            margin-left: 5px;
+            font-size: 12px;
+        }
 
-            .images-container img {
-                width: 40px;
-                height: 40px;
-            }
+        /* Step 5: Description tooltip on hover */
+        .description-tooltip {
+            visibility: hidden;
+            opacity: 0;
+            position: fixed;
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 10000;
+            max-width: 300px;
+            max-height: 200px;
+            overflow-y: auto;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+            transition: opacity 0.3s, visibility 0.3s;
+            font-size: 12px;
+            line-height: 1.4;
+            pointer-events: none;
+        }
+
+        .description-tooltip.visible {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        /* Lightbox - hidden */
+        .lightbox {
+            display: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Product Dashboard</h1>
+        <h1>Product Dashboard - Step 5: Hover Description (Final)</h1>
         
+        <!-- Step 2: Search -->
         <div class="controls">
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Tìm kiếm theo title...">
             </div>
             
+            <!-- Step 3: Items per page -->
             <div class="items-per-page">
                 <label>Hiển thị:</label>
                 <select id="itemsPerPage">
@@ -307,7 +277,6 @@
                     <th class="sortable" data-column="price">
                         Price <span class="sort-indicator" id="sort-price">↕</span>
                     </th>
-                    <th>Description (Hover)</th>
                     <th>Category</th>
                     <th>Images</th>
                 </tr>
@@ -316,6 +285,7 @@
             </tbody>
         </table>
 
+        <!-- Step 3: Pagination -->
         <div class="pagination" id="pagination"></div>
         <div class="pagination-info" id="paginationInfo"></div>
     </div>
